Advertisement deactivation implemented. Fixed footer and header CSS to hide horizontal scroll bar.

--- a/Ads-Project/styles/ads.css
+++ b/Ads-Project/styles/ads.css
@@ -148,6 +148,7 @@
     float: right;
     padding-left: 20px;
     border-left: 1px solid rgb(95, 157, 64);
+    height: 150px;
 }
 
 .userAd #adState label{
