--- a/Ads-Project/styles/main.css
+++ b/Ads-Project/styles/main.css
@@ -17,18 +17,21 @@ header {
     margin-bottom: 20px;
     text-align: center;
     background-color: rgb(169, 209, 142);
-    padding: 15px;
-    width: 100%;
+    padding: 15px 0px 15px 0px !important;
+    width: 99%;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 footer {
     bottom:0;
-    width: 100%;
+    width: 99%;
     margin: 0px auto;
     text-align: center;
     background-color: rgb(169, 209, 142);
-    padding: 15px;
+    padding: 15px 0px 15px 0px !important;
     margin-top: 20px;
+   
 }
 
 footer, #wrapper:after {
